refactor GeminiService for testability and DI