@@ -3,6 +3,7 @@ package br.com.casa_moreno.casa_moreno_backend.ai.service;
 import com.google.cloud.vertexai.api.GenerateContentResponse;
 import com.google.cloud.vertexai.generativeai.GenerativeModel;
 import com.google.cloud.vertexai.generativeai.ResponseHandler;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
 import org.springframework.stereotype.Service;
@@ -12,6 +13,9 @@ import java.nio.charset.StandardCharsets;
 
 @Service
 public class GeminiService {
+
+    @Value("${GEMINI_MODEL_NAME}")
+    private String geminiModelName;
 
     private final GenerativeModel generativeModel;
     private final ResourceLoader resourceLoader;
@@ -24,35 +28,23 @@ public class GeminiService {
     }
 
     public String generateChatResponse(String userMessage) throws IOException {
-        String prompt = """
-            Você é um assistente virtual da loja Casa Moreno, uma loja de utilidades para casa e presentes. Responda APENAS em português do Brasil.
-            Sua personalidade deve ser amigável, prestativa e um pouco informal.
-            Se a pergunta for sobre a loja, use o CONTEXTO DA LOJA para responder. Se a pergunta for sobre qualquer outro assunto, recuse-se educadamente a responder.
-            Não invente informações que não estão no contexto. Se a resposta não estiver no contexto, diga que não tem essa informação.
-            
-            CONTEXTO DA LOJA:
-            %s
-            
-            PERGUNTA DO CLIENTE:
-            %s
-            """.formatted(this.storeContext, userMessage);
+        String prompt = String.format(
+                "Você é um assistente virtual da loja Casa Moreno. Use estritamente o CONTEXTO abaixo para responder à pergunta do cliente de forma precisa. " +
+                        "Se a resposta não estiver no contexto, diga que você não tem essa informação e peça para o cliente entrar em contato. " +
+                        "CONTEXTO:\n---\n%s\n---\nPERGUNTA DO CLIENTE: %s",
+                this.storeContext,
+                userMessage
+        );
 
-        return generateText("gemini-1.0-pro", prompt);
+        return generateText(geminiModelName, prompt);
     }
 
     public String organizeProductDescription(String rawDescription) throws IOException {
-        String prompt = """
-            Você é um especialista em marketing para e-commerce. Sua tarefa é pegar uma descrição de produto "crua" e formatá-la usando tags HTML simples (como <strong>, <ul>, <li>, <p>, <br>) para torná-la atraente e fácil de ler.
-            - Destaque os pontos principais com <strong>.
-            - Use listas (<ul> e <li>) para especificações técnicas ou listas de itens.
-            - Não use estilos complexos, apenas formatação de texto básica.
-            - A resposta deve conter APENAS o HTML formatado, sem nenhuma outra palavra ou frase de introdução.
-            
-            A descrição é:
-            %s
-            """.formatted(rawDescription);
+        String prompt = "A partir desta descrição de produto apenas formate o texto para ficar mais visível e amigável para uma pessoa ler. " +
+                "Não invente nenhuma informação. Não tente deixar em negrito pois não é possível. Não utiize emojis apenas utilize as informações do texto e formate-o" +
+                "A descrição é: " + rawDescription;
 
-        return generateText("gemini-1.5-flash", prompt);
+        return generateText(geminiModelName, prompt);
     }
 
     private String generateText(String modelName, String prompt) throws IOException {
